--- a/index.html
+++ b/index.html
@@ -34,32 +34,18 @@
 
 <body>
 
-    <div class="container">
-        <!-- Sản phẩm 1 -->
-        <div class="product">
-            <h2>Sản phẩm A</h2>
-            <p>ID: <span id="productId1">123</span></p>
-            <p>Giá: $<span id="productPrice1">19.99</span></p>
-            <button onclick="addToCart(1)">Thêm vào giỏ hàng</button>
-        </div>
+    <div class="container" id="productsContainer">
+        <!-- Danh sách sản phẩm sẽ được thêm vào đây -->
+    </div>
 
-        <!-- Sản phẩm 2 -->
-        <div class="product">
-            <h2>Sản phẩm B</h2>
-            <p>ID: <span id="productId2">456</span></p>
-            <p>Giá: $<span id="productPrice2">29.99</span></p>
-            <button onclick="addToCart(2)">Thêm vào giỏ hàng</button>
+    <!-- Giỏ hàng -->
+    <div class="cart">
+        <h2>Giỏ hàng</h2>
+        <div id="cartItems">
+            <!-- Danh sách sản phẩm trong giỏ hàng sẽ được thêm vào đây -->
         </div>
-
-        <!-- Giỏ hàng -->
-        <div class="cart">
-            <h2>Giỏ hàng</h2>
-            <div id="cartItems">
-                <!-- Danh sách sản phẩm trong giỏ hàng sẽ được thêm vào đây -->
-            </div>
-            <p>Tổng tiền: $<span id="totalPrice">0.00</span></p>
-            <button onclick="checkout()">Thanh toán</button>
-        </div>
+        <p>Tổng tiền: $<span id="totalPrice">0.00</span></p>
+        <button onclick="checkout()">Thanh toán</button>
     </div>
 
     <script>
@@ -67,47 +53,61 @@
 
         // Gọi router để lấy thông tin giỏ hàng từ server khi trang index được load
         window.addEventListener('load', () => {
-            const userId = 'user123'; // Thay thế bằng userId thực tế
-            fetch(`/api/cart/${userId}`)
+            // Lấy thông tin sản phẩm từ API
+            fetch('/api/products')
                 .then(response => response.json())
-                .then(data => {
-                    console.log(data);
-                    data.forEach(item => {
-                        cartItems.push({
-                            id: item.productId, // Lưu ý: productId được sử dụng như id của sản phẩm trong giỏ hàng
-                            name: item.name,
-                            price: item.price
-                        });
-                    });
-                    displayCartItems();
+                .then(products => {
+                    // Sau khi nhận được danh sách sản phẩm, cập nhật giao diện người dùng
+                    displayProducts(products);
+
+                    // Lấy thông tin giỏ hàng sau khi đã lấy thông tin sản phẩm
+                    const userId = 'user123'; // Thay thế bằng userId thực tế
+                    fetch(`/api/cart/${userId}`)
+                        .then(response => response.json())
+                        .then(data => {
+                            console.log(data);
+                            data.forEach(item => {
+                                cartItems.push({
+                                    productId: item.productId, // Lưu ý: productId được sử dụng như id của sản phẩm trong giỏ hàng
+                                    productName: item.name,
+                                    productPrice: item.price // Sử dụng giá trị số đã chuyển đổi
+                                });
+                            });
+                            displayCartItems();
+                        })
+                        .catch(error => console.error('Lỗi khi lấy thông tin giỏ hàng:', error));
                 })
-                .catch(error => console.error('Lỗi khi lấy thông tin giỏ hàng:', error));
+                .catch(error => console.error('Lỗi khi lấy thông tin sản phẩm:', error));
         });
 
-        // Mảng để lưu trữ các mục trong giỏ hàng
+        function displayProducts(products) {
+            const productsContainer = document.getElementById('productsContainer');
 
-        // Hàm để thêm sản phẩm vào giỏ hàng
-        // Hàm để thêm sản phẩm vào giỏ hàng và gửi thông tin lên server
-        function addToCart(productId) {
-            let productName = document.getElementById(`productId${productId}`).textContent;
-            let productPrice = parseFloat(document.getElementById(`productPrice${productId}`).textContent);
-            const product = {
-                id: productId,
-                name: productName,
-                price: productPrice
-            };
-            cartItems.push(product);
-            console.log(cartItems);
-            displayCartItems();
+            // Xóa các sản phẩm cũ (nếu có)
+            productsContainer.innerHTML = '';
 
-            // Gửi thông tin sản phẩm lên server mỗi khi nhấn nút "Thêm vào giỏ hàng"
+            // Loop qua mỗi sản phẩm và hiển thị nó trên trang
+            products.forEach(product => {
+                const productElement = document.createElement('div');
+                productElement.classList.add('product');
+                productElement.innerHTML = `
+                    <h2>${product.productName}</h2>
+                    <p>ID: <span>${product.productId}</span></p>
+                    <p>Giá: $<span>${product.productPrice}</span></p>
+                    <button onclick="addToCart('${product.productId}', '${product.productName}', '${product.productPrice}')">Thêm vào giỏ hàng</button>
+                `;
+                productsContainer.appendChild(productElement);
+            });
+        }
+
+        function addToCart(productId, productName, productPrice) {
             fetch('/add-to-cart', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
                 },
                 body: JSON.stringify({
-                    userId: 'user123', // Giả sử userId là cố định 'user123' cho mục đích minh họa
+                    userId: 'user123', // Thay thế bằng userId thực tế
                     productId: productId,
                     productName: productName,
                     productPrice: productPrice
@@ -116,8 +116,14 @@
                 .then(response => response.text())
                 .then(data => {
                     alert(data);
-                    // Không cần chuyển hướng người dùng sang trang thanh toán ở đây
-                    //window.location.href = './pay.html';
+                    // Sau khi thêm sản phẩm vào giỏ hàng thành công, thêm sản phẩm vào mảng cartItems
+                    cartItems.push({
+                        productId: productId,
+                        productName: productName,
+                        productPrice: productPrice
+                    });
+                    // Gọi hàm displayCartItems để cập nhật giao diện giỏ hàng
+                    displayCartItems();
                 })
                 .catch(error => {
                     console.error('Error:', error);
@@ -125,46 +131,58 @@
         }
 
 
-        // Hàm để hiển thị danh sách sản phẩm trong giỏ hàng
-        // Hàm để hiển thị danh sách sản phẩm trong giỏ hàng
         function displayCartItems() {
             const cartContainer = document.getElementById('cartItems');
             const totalPriceElement = document.getElementById('totalPrice');
-            cartContainer.innerHTML = ''; // Clear previous contents
+            cartContainer.innerHTML = '';
 
             let totalPrice = 0;
 
-            // Loop through each item in the cart and display it
             cartItems.forEach(item => {
                 const cartItemElement = document.createElement('div');
                 cartItemElement.classList.add('cart-item');
-                cartItemElement.innerHTML = `
-            <p>${item.name} - $${item.price.toFixed(2)}</p>
-            <button onclick="removeFromCart(${item.id})">Xóa</button>
-        `;
-                cartContainer.appendChild(cartItemElement);
 
-                // Calculate total price
-                totalPrice += item.price;
+                // Kiểm tra xem productPrice có phải là một chuỗi không
+                if (typeof item.productPrice === 'string') {
+                    // Chuyển đổi productPrice thành số
+                    const price = parseFloat(item.productPrice);
+
+                    if (!isNaN(price)) {
+                        cartItemElement.innerHTML = `
+                    <p>${item.productName} - $${price.toFixed(2)}</p>
+                    <button onclick="removeFromCart('${item.productId}')">Xóa</button>
+                `;
+                        cartContainer.appendChild(cartItemElement);
+                        // Cộng tổng giá tiền
+                        totalPrice += price;
+                    } else {
+                        console.error('Error: Invalid product price');
+                    }
+                } else {
+                    console.error('Error: Product price is not a string');
+                }
             });
 
-            // Display the total price
+            // Hiển thị tổng giá tiền
             totalPriceElement.textContent = totalPrice.toFixed(2);
         }
 
 
+
+
         // Function to remove item from cart
         // Hàm này xóa sản phẩm có ID cụ thể khỏi giỏ hàng trên giao diện người dùng
+        // Function to remove item from cart
         function removeFromCart(productId) {
             console.log(productId);
             // Cập nhật mảng cartItems bằng cách loại bỏ sản phẩm có productId khớp
-            cartItems = cartItems.filter(item => item.id !== productId);
+            cartItems = cartItems.filter(item => item.productId !== productId);
 
             // Gọi hàm displayCartItems để cập nhật hiển thị giỏ hàng
             displayCartItems();
 
             // Gửi yêu cầu tới server để xóa sản phẩm khỏi giỏ hàng trong cơ sở dữ liệu
-            fetch(`/remove-from-cart/${`user123`}/${productId}`, {
+            fetch(`/remove-from-cart/${'user123'}/${productId}`, {
                 method: 'DELETE'
             })
                 .then(response => response.text())
@@ -175,6 +193,7 @@
                     console.error('Error:', error);  // Báo lỗi nếu có
                 });
         }
+
 
         function checkout() {
             window.location.href = './pay.html';
